<resources>
    <string name="app_name">PetrolNav</string>
    <string name="title_activity_login">PetrolNav</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="google_maps_key">AIzaSyB5wAKwrZMfu_9mP7gqwmJUkSuwMeVS6r8</string>
    <string name="navigate">Navigation</string>
    <string name="user_location">User location</string>
    <string name="petrol_station_location">Petrol Station location</string>
    <string name="message_unavailable_location">Unable to show current location</string>
    <string name="message_unavailable_distance">Unavailable distance</string>
    <string name="preferred_petrol_station">Preferred Petrol Station</string>
    <string name="non_preferred_petrol_station">Non-preferred Petrol Station</string>
    <string name="petrol_station_id">Petrol Station ID</string>
    <string name="petrol_station_name">Petrol Station Name</string>
    <string name="petrol_station_brand">Petrol Station Brand</string>
    <string name="petrol_station_address">Petrol Station Address</string>
    <string name="station_distance_from_user">Distance from user location to Petrol Station location</string>
    <string name="petrol_station_petrol">Petrol List : </string>
    <string name="message_unavailable_app">Navigation applications not found</string>
    <string name="message_unavailable_price_change">xx.xx</string>
    <string name="petrol_price_history">Petrol Price History</string>
    <string name="petrol_price_value">RM %1$.2f</string>
    <string name="message_register_failed">Register failed</string>
    <string name="message_register_success">Register successful!</string>
    <string name="message_invalid_name">The name should be at least 3 characters.</string>
    <string name="message_invalid_email_address">Please enter a valid email address.</string>
    <string name="message_unavailable_email">The email had been used. Please use other email.</string>
    <string name="message_invalid_length_password">The password should be at least 4 characters.</string>
    <string name="message_invalid_confirm_password">Please enter the same password to confirm.</string>
    <string name="message_mismatch_confirm_password">The password you input does not match with inputted password</string>
    <string name="user_name">Name</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="if_a_member_login">Already a member? Login</string>
    <string name="message_login_failed">Login failed</string>
    <string name="message_login_success">Login successful!</string>
    <string name="message_invalid_password">Please enter a password</string>
    <string name="title_log_out">Log Out</string>
    <string name="message_confirm_log_out">Confirm to log out?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="message_email_do_not_exist">This email address does not exist!</string>
    <string name="message_send_email_success">Email is successfully verified! Moving to Reset Password!</string>
    <string name="message_reset_password_success">Reset password successful!</string>
    <string name="user_new_password">New password</string>
    <string name="button_reset">Reset</string>
    <string name="message_reset_password">Please reset your password here:</string>
    <string name="title_welcome_to_petrolnav">Welcome to PetrolNav App</string>
    <string name="message_welcome_to_petrolnav">This is your first time using this app. To begin, please select the petrol and petrol station brands you prefer and save it. You can change them again later at the preferences setting</string>
    <string name="button_ok">OK</string>
    <string name="message_location_did_not_change">Current location did not change</string>
    <string name="query_search_your_location">Search your location here</string>
    <string name="title_retrieval_data_fail">Retrieval of required data failed</string>
    <string name="message_retrieval_data_fail">Retrieval of data failed due to internet problem or other issue. Please retry again.</string>
    <string name="title_petrol_station_brands">Petrol Station Brands:</string>
    <string name="checkbox_select_all">Select All</string>
    <string name="checkbox_shell">Shell</string>
    <string name="checkbox_petronas">Petronas</string>
    <string name="checkbox_bhpetrol">BHPetrol</string>
    <string name="checkbox_caltex">Caltex</string>
    <string name="checkbox_petron">Petron</string>
    <string name="title_petrol_type">Petrol Type:</string>
    <string name="radiobutton_ron95">Ron 95</string>
    <string name="radiobutton_ron97">Ron 97</string>
    <string name="radiobutton_diesel">Diesel</string>
    <string name="radiobutton_euro5">Diesel EURO5</string>
    <string name="button_save">Save</string>
    <string name="checkbox_deselect_all">Deselect All</string>
    <string name="title_station_list">Station List</string>
    <string name="title_preference">Preference</string>
    <string name="title_petrol_price_history">Petrol Price History</string>
    <string name="price_change_positive_value">+%1$.2f</string>
    <string name="price_date_text">Date</string>
    <string name="price_text">Price</string>
    <string name="price_change_text">Change</string>
    <string name="distance_value">%1$.2f KM away</string>
    <string name="title_petrol_station_detail_page">Petrol Station Detail Page</string>
    <string name="message_connection_error">Sorry, no Internet connection is detected. Please reconnect and try again</string>
    <string name="message_authenticating">Authenticating…</string>
    <string name="message_registering">Registering…</string>
    <string name="user_phone_number">Phone number</string>
    <string name="message_invalid_phone_number">Please enter the phone number</string>
    <string name="message_loading_required_data">Loading required data now …</string>
    <string name="message_loading_petrol_station_data">Loading Petrol Station Data</string>
    <string name="button_retry">Retry</string>
    <string name="message_empty_list_preferred_station">Sorry, you do not have any preferred stations!</string>
    <string name="message_empty_list_non_preferred_station">Sorry, you do not have any non-preferred stations!</string>
</resources>
