<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="24dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/petrolStationImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:adjustViewBounds="true"
        android:maxHeight="120dp"
        android:maxWidth="120dp"
        android:scaleType="fitCenter"
        android:src="@drawable/petrol_nav_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/petrolStationIdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/petrol_station_id" />

        <TextView
            android:id="@+id/petrolStationNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/petrol_station_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/petrolStationBrandTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/petrol_station_brand" />

            <TextView
                android:id="@+id/petrolStationAddressTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/petrol_station_address" />

            <TextView
                android:id="@+id/petrolListTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/petrol_station_petrol" />

            <TextView
                android:id="@+id/petrolTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/petrol" />
        </LinearLayout>

        <TextView
            android:id="@+id/petrolStationDistanceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/station_distance_from_user" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/navigationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:background="@android:color/holo_green_light"
        android:padding="10dp"
        android:text="@string/navigate" />

</LinearLayout>