<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registerViewgroupContainer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="30dp">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/petrolnavLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:adjustViewBounds="true"
            android:maxHeight="80dp"
            android:maxWidth="80dp"
            android:scaleType="fitCenter"
            android:src="@drawable/petrol_nav_launcher" />

        <!-- Name -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <!-- Email -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- Confirm Password -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirmPasswordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_confirm_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button-->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_light"
            android:padding="12dp"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <!-- Register Link-->
        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/if_a_member_login"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>
</LinearLayout>